Changes with mod_fastcgi 2.2.2

 *) Improved script stderr handling.  [based on suggestions by 
    David Birnbaum <davidb@chelsea.net>]
    
 *) Added IRIX and FreeBSD to the list of supported platforms and other minor
    updates to the INSTALL doc.

 *) Changed the default listen-queue-depth (FCGI_DEFAULT_LISTEN_Q) from
    5 to 100.  Its still configurable with the --listen-queue-depth option.
    This should help eliminate the FAQ - Why do I see "Connection Refused"
    messages in the log?

 *) Fix a bug in FastCgiExternalServer that broke support for external servers 
    on other hosts.  [Dave Neuer <dneuer@futuristics.net>]

Changes with mod_fastcgi 2.2.1

 *) Updates to the INSTALL doc to describe building as a DSO.
 
 *) If the FastCgiIpcDir directive was in use and "httpd -t" was issued while
    Apache was running ("apachectl restart" does this), the contents of the
    dynamic directory (dynamic sockets and the mbox) would be blown away 
    (a 2.1b1 bug).

 *) Add an extern declaration for ap_sys_siglist (its exposed but not in any
    Apache header file) to prevent a compile error on systems without
    SYS_SIGLIST defined.
    
 *) During auth requests, the subprocess_env table was left holding variables
    sent to the auth FastCGI server (including REMOTE_PASSWD!) which means they
    were passed to other processing phases (such as CGI/FastCGI).  The
    subprocess_env is now restored to its pre-auth condition.
    
 *) Added a FastCGI Authorizer Role compatibility mode which implements the 
    specification to the tee.  Use -compat arg with any of the Auth server
    directives.  This is intended for new and existing FastCGI authorizer
    applications that require compatibility with other server implementations.
    
 *) Fix logging from the process manager.  Previously, all calls to the 
    logging routines used NULL for the server_rec.  This works fine in a dev
    environment, but results in most of these messages being tossed by